--- a/webapp/app/globals.css
+++ b/webapp/app/globals.css
@@ -4,8 +4,8 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 12, 82, 119;
-  --background-end-rgb: 33, 170, 194;
+  --background-start-rgb: 168, 5, 193;
+  --background-end-rgb: 0, 0, 0;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -16,7 +16,7 @@
   }
 }
 
-body {
+html {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -24,4 +24,11 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  min-height: 100vh;
+}
+
+
+a {
+  color: #6161ef;
+  text-decoration: underline;
 }
